syntax = "proto3";

package order.v1;

import "google/protobuf/timestamp.proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  repeated LineItem items = 3;
}

message LineItem {
  int32 position = 1;
  int64 product_id = 2;
  int64 quantity = 3;
}

message CreateOrderResponse {}
